[project]
name = "claude-benchmark"
version = "0.1.0"
description = "CLI tool for benchmarking CLAUDE.md configurations against standardized coding tasks"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Johnny Chilcher"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.12",
    "python-frontmatter>=1.1.0",
    "tomli-w>=1.2",
    "typer>=0.22",
    "claude-code-sdk>=0.0.25",
    "rich>=13.0",
    "radon>=6.0.1",
    "pytest-json-report>=1.5.0",
    "ruff>=0.15.4",
    "anthropic>=0.84.0",
    "scipy>=1.17.1",
    "jinja2>=3.1",
    "pygments>=2.17",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[project.scripts]
claude-benchmark = "claude_benchmark.cli.main:app"

[project.urls]
Repository = "https://github.com/jchilcher/claude-benchmark"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
